Optimistic fix to word wrapping issue.

--- a/src/css/search-bar.css
+++ b/src/css/search-bar.css
@@ -58,6 +58,7 @@ a,a:visited {
   padding: 6px; 
   border: 1px solid #ccc; 
   text-align: left; 
+  word-wrap: break-word;
 }
 
 .rssFeedContainer {
